--- a/cinna_daily.html
+++ b/cinna_daily.html
@@ -7,7 +7,7 @@
 <title> Cinna daily :3 </title>
 </head>
 
-<body background="imagens/fundo-abstrato-gradiente-azul-azul-escuro-liso-com-vinheta-preta-studio_1258-67766.jpg">
+<body align="center" background="imagens/fundo-abstrato-gradiente-azul-azul-escuro-liso-com-vinheta-preta-studio_1258-67766.jpg">
 
 <img src="imagens/cinnadog.png" alt="cinnadog <3">
 <p>tenha um bom dia :></p>
