melhorias na página contatos

--- a/cinna_daily.html
+++ b/cinna_daily.html
@@ -10,7 +10,7 @@
 <body align="center" background="imagens/fundo-abstrato-gradiente-azul-azul-escuro-liso-com-vinheta-preta-studio_1258-67766.jpg">
 
 <img src="imagens/cinnadog.png" alt="cinnadog <3">
-<p>tenha um bom dia :></p>
+<p><big><big>Tenha um bom dia! :3</big></big></p>
 
 <a href="index.html">Página inicial</a>
 </body>
