adição da página de registro e modificações+2.0

--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
             <td align="center">
       
               <ul type="square"> 
-              <a href="">Página Inicial | </a>   
+              <a href="index.html">Página Inicial | </a>   
         
               <a href="cinna_daily.html"> 
               Cinna todo dia | </a>
